--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,19 +13,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout the latest code from the specified branch
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}  # Use the selected branch
 
+      # Verify that the GCP Service Account Key is set
+      - name: Verify GCP Service Account Key
+        run: |
+          echo "Verifying GCP Service Account Key..."
+          if [ -z "${{ secrets.GCP_SA_KEY }}" ]; then
+            echo "GCP_SA_KEY is not set."
+            exit 1
+          else
+            echo "GCP_SA_KEY is set."
+            echo "${{ secrets.GCP_SA_KEY }}" | base64 --decode > /tmp/gcp-key.json
+            echo "GCP Service Account Key is valid and saved to /tmp/gcp-key.json"
+          fi
+
+      # Set up Google Cloud SDK
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: test-automation-shreya
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          service_account_key: /tmp/gcp-key.json
           export_default_credentials: true
 
+      # Deploy to Google Cloud Storage
       - name: Deploy to Google Cloud Storage
         run: |
-          gsutil cp -r ./ gs://shreya-new-bucket
-
+          gsutil cp -r ./ gs://shreya-new-bucket/calculator-app
